--- a/debian/rules
+++ b/debian/rules
@@ -19,6 +19,7 @@ override_dh_auto_configure:
 		--disable-browser-plugin \
 		--enable-djvu \
 		--enable-dvi \
+		--enable-ps \
 		--enable-xps \
 		--enable-comics \
 		--enable-introspection \
